# text2int

./: README.md  pyproject.toml  requirements.txt
rutext2int/: __init__.py  main.py  my_data.py  worker.py
